--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
 <app-header></app-header>
 <main>aquí pondremos cosas.....</main>
-<footer>
-  <p>© {{ getYear() }} Minsait</p>
-</footer>
+<app-footer></app-footer>
