--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-header></app-header>
-<main>aquí pondremos cosas.....</main>
+<main>
+  <app-home></app-home>
+</main>
 <app-footer></app-footer>
