--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,18 +1,13 @@
 <article>
+  <!-- home-header -->
+  <app-home-header></app-home-header>
   <header>
     <h3>List of {{ publishedActivities.length }} activities</h3>
     <button (click)="onButtonClick()">Sort by price 🔃</button>
   </header>
   <ul>
-    <li *ngFor="let activity of publishedActivities">
-      <span>{{ activity.title | titlecase }}</span>
-      <span> 📅 {{ activity.date | date : "dd-MMM-yy" }}</span>
-      <span *ngIf="isCheap(activity); else expensive"> 🤑 </span>
-      <ng-template #expensive>
-        <span> 💸 </span>
-      </ng-template>
-      <span>{{ activity.price | currency : activity.currency }}</span>
-      <span [class]="getClasses(activity)">{{ activity.ageCategory }}</span>
+    <li *ngFor="let a of publishedActivities">
+      <app-activity-item [activity]="a"></app-activity-item>
     </li>
   </ul>
 </article>
