--- a/src/app/home-header/home-header.component.html
+++ b/src/app/home-header/home-header.component.html
@@ -1,1 +1,4 @@
-<p>home-header works!</p>
+<header>
+  <h3>List of {{ numberOfActivities }} activities</h3>
+  <button (click)="onButtonClick()">Sort by price 🔃</button>
+</header>
