feat: basic routes

--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,3 +1,9 @@
 <footer>
-  <app-copy-right></app-copy-right>
+  <section>
+    <app-copy-right></app-copy-right>
+    <nav>
+      <a routerLink="about">ℹ️ About us</a>
+      <a routerLink="contact">📧 Get in contact</a>
+    </nav>
+  </section>
 </footer>
