feat: activities route

--- a/src/app/home-header/home-header.component.html
+++ b/src/app/home-header/home-header.component.html
@@ -1,4 +1,4 @@
 <header>
-  <h3>List of {{ numberOfActivities }} activities</h3>
+  <h3>List of {{ numberOfActivities }} published activities</h3>
   <button (click)="onButtonClick()">Sort by price 🔃</button>
 </header>
