--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,5 +1,8 @@
 <header>
-  <h1>
-    <a routerLink="/">{{ title }}</a>
-  </h1>
+  <nav>
+    <h1>
+      <a routerLink="/">{{ title }}</a>
+    </h1>
+    <a routerLink="activities">➡️ Activities</a>
+  </nav>
 </header>
