--- a/src/app/activities/activities.component.html
+++ b/src/app/activities/activities.component.html
@@ -1,5 +1,10 @@
 <h3>➡️ Activities management</h3>
 <ul>
-  <li *ngFor="let a of allActivities">{{ a.title }} - {{ a.state }}</li>
+  <li *ngFor="let a of allActivities">
+    <span>
+      <a [routerLink]="[a.slug]">{{ a.title }}</a>
+    </span>
+    <span>{{ a.state }}</span>
+  </li>
 </ul>
 <button routerLink="new">Add Activity</button>
