--- a/src/app/activities/activity-new/activity-new.component.html
+++ b/src/app/activities/activity-new/activity-new.component.html
@@ -11,6 +11,9 @@
         formControlName="title"
         [attr.aria-invalid]="form.controls['title'].invalid"
       />
+      <small *ngIf="form.controls['title'].errors">{{
+        form.controls["title"].errors | json
+      }}</small>
     </div>
     <div>
       <label for="location">Location</label>
@@ -22,6 +25,9 @@
         formControlName="location"
         [attr.aria-invalid]="form.controls['location'].invalid"
       />
+      <small *ngIf="form.controls['location'].errors">{{
+        form.controls["location"].errors | json
+      }}</small>
     </div>
     <div>
       <label for="price">Price</label>
@@ -32,6 +38,9 @@
         formControlName="price"
         [attr.aria-invalid]="form.controls['price'].invalid"
       />
+      <small *ngIf="form.controls['price'].errors">{{
+        form.controls["price"].errors | json
+      }}</small>
     </div>
     <div>
       <label for="ageCategory">Age Category</label>
@@ -46,4 +55,5 @@
 </form>
 <pre>
   {{ form.value | json }}
+  VALID: {{ form.valid | json }}
 </pre>
