--- a/src/app/activities/activity-new/activity-new.component.html
+++ b/src/app/activities/activity-new/activity-new.component.html
@@ -7,7 +7,7 @@
         id="title"
         name="title"
         type="text"
-        placeholder="El título de la actividad"
+        placeholder="Activity title"
         formControlName="title"
         [attr.aria-invalid]="form.controls['title'].invalid"
       />
@@ -21,7 +21,7 @@
         id="location"
         name="location"
         type="text"
-        placeholder="El lugar de la actividad"
+        placeholder="Activity location"
         formControlName="location"
         [attr.aria-invalid]="form.controls['location'].invalid"
       />
