--- a/src/app/activities/activity-detail/activity-detail.component.html
+++ b/src/app/activities/activity-detail/activity-detail.component.html
@@ -1,5 +1,6 @@
 <h3>👁️ Detail of activity</h3>
-<article>
+
+<article *ngIf="activity$ | async as activity">
   <h3>{{ activity.title | uppercase }}</h3>
   <p>
     <span> 📅 Date: </span
