feat: search switch map

--- a/src/app/activities/activities.component.html
+++ b/src/app/activities/activities.component.html
@@ -1,7 +1,8 @@
 <h3>➡️ Activities management</h3>
+<input type="search" (keyup)="onKeyUp($event)" #searchInput />
 <ul>
-  <!-- <li *ngFor="let a of allActivities"> -->
-  <li *ngFor="let a of allActivities$ | async">
+  <li *ngFor="let a of allActivities">
+    <!-- <li *ngFor="let a of allActivities$ | async"> -->
     <span>
       <a [routerLink]="[a.slug]">{{ a.title }}</a>
     </span>
