--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -3,6 +3,9 @@
     <h1>
       <a routerLink="/">{{ title }}</a>
     </h1>
+    <span
+      >🍳 <b>{{ activitiesCount }}</b> activities found</span
+    >
     <a routerLink="activities">➡️ Activities</a>
   </nav>
 </header>
